# jrk-g2-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
arduino/: Cargo.toml
arduino/.cargo/: config.toml
arduino/examples/: arduino-uno-i2c.rs  arduino-uno-serial.rs
examples/: rpi-i2c.rs  rpi-serial.rs  show-state-stm32f1.rs  stm32-i2c.rs  stm32-serial.rs
src/: blocking_i2c.rs  enums.rs  i2c.rs  jrk.rs  lib.rs  non_blocking.rs  serial.rs
