[package]
name = "jrk-g2-rs"
version = "1.0.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2018"
readme = "README.md"
license = "BSD-2-Clause"
description = "A rust embedded driver for pololuu Jrk G2"

[features]
default = []
stm32 = ["cortex-m", "cortex-m-rt", "panic-halt", "stm32f1xx-hal"]
rpi = ["linux-embedded-hal"]

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"
ufmt = "0.1.0"
cortex-m = { version = "0.6.4", optional = true }
cortex-m-rt = { version = "0.6.13", optional = true }
panic-halt = { version = "0.2.0", optional = true }
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"], optional = true}
linux-embedded-hal = { version = "0.3.0", optional = true }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
